--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital@0;1&family=Varela&family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
     <title>Blog React Application</title>
   </head>
   <body>
